--- a/01.0_datasets.ipynb
+++ b/01.0_datasets.ipynb
@@ -239,27 +239,31 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
-   "id": "45f057d2-0463-4936-b19a-4c7ab32a9c03",
+   "id": "2e0da778-cac5-4ee6-96ec-b68f3dc51dee",
    "metadata": {},
    "source": [
-    "**Observations:**\n",
-    "We see that these time series are quite varied in (a) range of y-values, (b) their trend, seasonality, shifting, transition, stationarty. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a7a52625-538c-4a09-aeaf-a7b4173c4287",
-   "metadata": {},
-   "source": [
+    "#### Preliminary Observations\n",
+    "\n",
+    "- **Range of Y-values:** The datasets exhibit a wide variety of value ranges, highlighting different scales and magnitudes within the data.\n",
+    "  \n",
+    "- **Trend:** Each time series may display unique trends, either increasing, decreasing, or remaining relatively stable over time.\n",
+    "\n",
+    "- **Seasonality:** Some series show clear periodic patterns, indicating seasonality, while others do not exhibit obvious seasonal effects.\n",
+    "\n",
+    "- **Shifts and Transitions:** Instances of sudden shifts or gradual transitions in the data point to changes in the underlying dynamics of the series.\n",
+    "\n",
+    "- **Stationarity:** The stationarity of the series varies, with some datasets showing stable statistical properties over time and others demonstrating significant changes in mean and variance.\n",
+    "\n",
     "### Summarization\n",
     "\n",
-    "We will look at the following\n",
+    "We summarize the time series data to extract insightful statistics that reveal the underlying structure and behavior of the data. We'll use two primary approaches to achieve this:\n",
     "\n",
-    "- Descriptive statistics: Though unusual for time series, it still helps to see the range of values and variance in them.\n",
-    "- Rolling statistics: It's basically descriptive statistics but applied on a rolling basis to the time series. It gives the sense of mean and variability of the data temporally.\n",
+    "**Descriptive Statistics** provide a quick overview of the distribution and variability within the dataset. Although it's somewhat unconventional to apply these statistics directly to time series data due to their time-dependent nature, they are still valuable for getting a snapshot of mean, variance, and the range of values. \n",
+    "By examining these statistics, we can initially assess the stability and volatility of the series, setting the stage for more complex analyses.\n",
     "\n",
-    "#### Descriptive Statistics"
+    "**Rolling Statistics** To capture the dynamic nature of time series data, we apply rolling (or moving) statistics, which involve calculating descriptive statistics over a specified window that moves along the data points."
    ]
   },
   {
@@ -300,7 +304,15 @@
    "source": [
     "#### Rolling Statistics\n",
     "\n",
-    "While the difference with respect to the above visualization might not be visible, we will look at such visualization in the subsequent notebooks where we will be focusing on a single time series."
+    "Rolling statistics are essential for understanding the dynamics of time series data. In subsequent notebooks, we will look at them more deeply with focused visualizations on individual time series dataset. \n",
+    "\n",
+    "This visualization often helps us to\n",
+    "\n",
+    "- **Visualize Changes Over Time:** By examining rolling means and variances, we can understand better how the data’s characteristics evolve.\n",
+    "\n",
+    "- **Identify Trends and Patterns:** Rolling statistics help in smoothing out noise and revealing underlying trends that might not be visible in the raw data.\n",
+    "\n",
+    "- **Assess Temporal Stability:** Monitoring changes in rolling statistics such as the standard deviation over time provides insights into the stability of the time series.\n"
    ]
   },
   {
@@ -350,17 +362,30 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57f2a96e-f90b-4896-9d91-5456a0470769",
+   "id": "111c9228-3bb5-4a2d-a4aa-62634b7fa794",
    "metadata": {},
    "source": [
     "### Correlation Plots\n",
     "\n",
-    "These plots are crucial for identifying the type of model that we might want to use.\n",
+    "Correlation plots are very important tools in time series analysis. They help in identifying the dependencies between observations at different time intervals, which is crucial for selecting the appropriate modeling techniques. Here, we focus on two primary types of correlation plots:\n",
     "\n",
-    "- Lag plot: A plot of observations at the current point and its lag. It gives a sense of dependency between the current observation and the previous observations. \n",
-    "- Autocorrelation and Partial Autocorrelation (ACF, PACF): These plots help identifying the level of association (linear) between the observations at various lags. It is in essence a summarized version of lag plots at various lags.\n",
+    "#### Lag Plot\n",
     "\n",
-    "#### Lag Plots"
+    "Lag plots are simple and powerful diagnostic tools that display a scatter plot of the series against a lagged version of itself. By examining these plots, we can get an intuitive sense of whether a data point is likely to be followed by similar (or dissimilar) points.\n",
+    "\n",
+    "Consistent patterns in a lag plot indicate a relationship between an observation and its lag, suggesting potential predictability in the series. Random patterns, conversely, imply that the time series may be more random or require different analytical techniques to uncover deeper structures.\n",
+    "\n",
+    "#### Autocorrelation and Partial Autocorrelation (ACF and PACF)\n",
+    "\n",
+    "- **Autocorrelation (ACF):** This plot shows the correlation of the series with itself at different lags. ACF is essential for identifying the extent of the **linear** relationship between an observation and its predecessors.\n",
+    "  \n",
+    "- **Partial Autocorrelation (PACF):** Unlike ACF, which includes all lagged correlations, PACF isolates the correlation between observations at two points in time, controlled for all shorter lag intervals. This can help differentiate direct effects from indirect influences.\n",
+    "\n",
+    "#### Utility in Modeling\n",
+    "\n",
+    "- **Model Selection:** The insights gained from these plots are vital for selecting the type of time series model to employ. For example, significant peaks in an ACF or PACF plot might suggest an ARIMA model is appropriate, where parameters such as p (lags in AR terms) and q (lags in MA terms) are indicated by the lag at which the plot cuts off.\n",
+    "\n",
+    "- **Identifying Seasonality:** Regular patterns in these plots can also help identify seasonality, informing decisions about adding seasonal differencing in ARIMA models or choosing a seasonal model like SARIMA.\n"
    ]
   },
   {
@@ -411,7 +436,13 @@
    "id": "895006e6-a5c5-4fb4-8308-4d28a6a5a2fe",
    "metadata": {},
    "source": [
-    "**Observations:** As we see, the correlation between the consecutive observation is not always one as one migh expect. There are time series where there seems to be no correlation at all. This might be an indication that there are other lags which are correlated with the current observation or the consecutive observations are related non-linearly to the previous observations. This intuition becomes important as we sketch out the modeling techniques for time series. "
+    "**Preliminary Observations**\n",
+    "\n",
+    "- Not all series show a strong correlation between consecutive data points. Some exhibit little or no correlation.\n",
+    "  \n",
+    "- A lack of strong linear correlation might suggest non-linear relationships or influences from other lags, pointing to more complex dynamics within the series.\n",
+    "\n",
+    "- These findings are vital for selecting appropriate models. Non-linear relationships may mean that more advanced modeling techniques beyond traditional linear models are needed."
    ]
   },
   {
@@ -419,9 +450,7 @@
    "id": "e90ea7b1-ca33-44b4-9f10-4f09db6d9e8d",
    "metadata": {},
    "source": [
-    "### Autocorrelation\n",
-    "\n",
-    "These plots tend to summarize the lag plots for various lags so that one can directly look at the correlation (a measure for linear association) between observation across various lags. "
+    "### Autocorrelation"
    ]
   },
   {
@@ -478,9 +507,9 @@
    "id": "4196717a-9838-4715-a734-fd219d9a9b45",
    "metadata": {},
    "source": [
-    "**Observations:** One can build their intuition by gazing over the raw time series datasets, lag plots, and these autocorrelation plots. \n",
-    "\n",
-    "We see that there are datasets with strong dependencies across the lags as well as very weak dependencies too. "
+    "**Observations:** \n",
+    "Some datasets display strong dependencies across various lags, indicating predictable patterns. Others show weak or negligible dependencies, suggesting more complexity or randomness in the data.\n",
+    "These observations help tailor our approach to modeling, emphasizing the need to adapt techniques based on the specific characteristics of each dataset."
    ]
   },
   {
@@ -546,7 +575,7 @@
    "id": "14dca6f5-3874-40fa-8b9c-241308d15d23",
    "metadata": {},
    "source": [
-    "**Observations:** We see a sharp decline in the correlation across the lags as the lag increases for most of the time series. This is where one reads the order of auto-regression modeling parameters, i.e, number of previous observations to include in the model. "
+    "**Observations:** There is a noticeable decline in correlation as the lag increases. This helps in determining the order of auto-regression parameters, i.e., how many previous observations should be included in the model for optimal forecasting."
    ]
   },
   {
@@ -556,18 +585,21 @@
    "source": [
     "### Stationarity\n",
     "\n",
+    "Stationarity is crucial in time series analysis, as many traditional models like ARIMA assume that the time series does not change its statistical properties over time. A stationary series meets the following conditions:\n",
     "\n",
-    "A series is stationary if all of it's statistical properties remain constant over time (Strong stationarity). For weak stationarity, it needs to satisfy the following conditions:\n",
-    "- Constant Mean: The mean of the series doesn't change over time.\n",
-    "- Constant Variance: The variance of the series does not change over time, i.e., the series does not exhibit periods of high variability at one time and low variability at another\n",
-    "- Constant Covariance: The covariance of the i-th term and the (i+k)-th term should not depent on the time. This condition implies that the way series values are correlated with each other over intervals remains constant over time.\n",
+    "- **Constant Mean:** The average value remains unchanged over time.\n",
+    "- **Constant Variance:** The spread or variability of the series does not fluctuate over time.\n",
+    "- **Constant Covariance:** The relationship between intervals in the series remains consistent, regardless of the time at which it is measured.\n",
     "\n",
-    "Stationarity is a common assumption behind traditional time series modeling approaches such as ARIMA and SARIMA.\n",
+    "#### Methods to Achieve Stationarity\n",
     "\n",
-    "There are several methods used to make time series stationary -- \n",
-    "- Differencing: Subtract the previous observation from the current observation.\n",
-    "- Seasonal Differencing: Subtract the  observation from the same season in the previous cycle\n",
-    "- Transformation: Take logarithm, square root, of other transformations to stabilize the mean and varaince of the time series\n"
+    "To handle non-stationary data, techniques include:\n",
+    "\n",
+    "- **Differencing:** Subtracting the previous observation from the current one.\n",
+    "- **Seasonal Differencing:** Subtracting the observation from the same season in the previous cycle.\n",
+    "- **Transformation:** Applying logarithmic, square root, or other transformations to stabilize the mean and variance.\n",
+    "\n",
+    "These techniques help in modifying the series to meet the assumptions necessary for traditional modeling."
    ]
   },
   {
@@ -608,24 +640,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5756e827-887d-4de6-9d19-3637d7209662",
+   "id": "47264713-9ac2-4d71-842b-e5db8dc3646a",
    "metadata": {},
    "source": [
-    "### Seasonality \n",
+    "### Seasonality\n",
     "\n",
+    "Understanding the components of a time series—trend, seasonality, and residuals—is crucial for effective modeling. Each component plays a different role:\n",
     "\n",
-    "Now we look at Trend, Seasonality, Residuals of these time series.\n",
+    "- **Trend:** Represents the long-term progression of the series.\n",
+    "- **Seasonality:** Indicates predictable patterns that repeat over a specific period.\n",
+    "- **Residuals:** Comprise the random variations left after trend and seasonality have been accounted for. Ideally, these should be stationary and can be modeled separately.\n",
     "\n",
-    "A time series can be modeled by decomposing it into trend, seasonality, and residuals. The residuals, ideally, should be stationary and can be modeled separately. \n",
-    "\n",
-    "ARIMA is particularly designed to handle non-stationary time seies by incorporating differencing directly into the model. Seasonal ARIMA (SARIMA) can handle series with both non-stationarity and seasonality by using seasonal differencing. \n",
-    "\n",
-    "Moving beyond the stationary models, ML approaches can model non-stationry data effectively as they can capture non-linear relationships in data. \n",
-    "\n",
-    "\n",
-    "Note: Since the datasets are missing information about the frequency, we will stcik to the ones that have frequency in their names explicitly. \n",
-    "\n",
-    "\n"
+    "**Note:** Due to missing frequency information in some datasets, we will focus on those explicitly labeled with a frequency.\n"
    ]
   },
   {
@@ -722,20 +748,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "715ceb7c-91a8-4fe6-b9b7-876274eb4cd0",
-   "metadata": {},
-   "source": [
-    "**Observations:** We break each time series into its components: Trend, Seasonality, and Residuals. As a result, there are four plots per time series - one corresponding to the original time series and the rest about it components. \n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "a2ae9a84-abb1-4a58-a2af-7659e82240af",
    "metadata": {},
    "source": [
-    "#### Frequency Analysis\n",
+    "### Frequency Analysis\n",
     "\n",
-    "More deeper look into seasonality. Perform spectral analysis to identify any hidden periodicities. A fourier transform can help identify dominant cycles in the data even if they aren't apparent visually. "
+    "Fourier Transform is a mathematical tool converts time series data from the time domain into the frequency domain. It helps in identifying dominant cycles or periodic components that might not be evident through visual inspection alone.\n",
+    "\n",
+    "We can get deeper into understanding the seasonality of the time series by identifying the hidden periodicities in the data.\n"
    ]
   },
   {
@@ -794,59 +814,8 @@
    "source": [
     "## Next Steps\n",
     "\n",
-    "1. More data analysis (Optional): Let's look at a single univariate dataset and do the similar analysis as above on it.\n",
-    "2. Head over to 01.4_gluonts_datasets.ipynb to learn about a library that we will use to build advanced forecasting methods."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 134,
-   "id": "6891f2e4-4710-45bf-8b65-9ab321a3b1cd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = utils.read_data('/Users/gupta/Workspace/tutorials/time_series/forecasting/Traffic.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 138,
-   "id": "7973ef64-7087-4265-a7fc-490cc0de4385",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['channel_1', 'channel_2', 'channel_3', 'channel_4', 'channel_5',\n",
-       "       'channel_6', 'channel_7', 'channel_8', 'channel_9', 'channel_10',\n",
-       "       ...\n",
-       "       'channel_853', 'channel_854', 'channel_855', 'channel_856',\n",
-       "       'channel_857', 'channel_858', 'channel_859', 'channel_860',\n",
-       "       'channel_861', 'channel_862'],\n",
-       "      dtype='object', length=862)"
-      ]
-     },
-     "execution_count": 138,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x.columns"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f4ba3252-00e6-4fb6-acce-1b0a833e58e6",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
-   "source": [
-    "We see that these time series are quite varied in (a) range of y-values, (b) their trend, seasonality, shifting, transition, stationarty. \n",
-    "\n",
-    "\n",
-    "From: https://huggingface.co/blog/autoformer\n",
-    "Secondly, multivariate models are typically worse than the univariate ones, the reason being the difficulty in estimating the cross-series correlations/relationships. The additional variance added by the estimates often harms the resulting forecasts or the model learns spurious correlations. Recent papers like CrossFormer (ICLR 23) and CARD try to address this problem in Transformer models. Multivariate models usually perform well when trained on large amounts of data. However, when compared to univariate models, especially on smaller open datasets, the univariate models tend to provide better metrics. By comparing the linear model with equivalent-sized univariate transformers or in fact any other neural univariate model, one will typically get better performance."
+    "1. **Further Data Analysis (Optional):** For those interested in a deeper dive, we can analyze a specific univariate dataset in detail, applying the techniques discussed above.\n",
+    "2. **Explore Advanced Tools:** Proceed to `01.4_gluonts_datasets.ipynb` to explore the GluonTS library, a powerful tool for developing advanced forecasting methods.\n"
    ]
   }
  ],
