--- a/01.0_datasets.ipynb
+++ b/01.0_datasets.ipynb
@@ -814,7 +814,7 @@
    "source": [
     "## Next Steps\n",
     "\n",
-    "1. **Further Data Analysis (Optional):** For those interested in a deeper dive, we can analyze a specific univariate dataset in detail, applying the techniques discussed above.\n",
+    "1. **Further Data Analysis (Optional):** Proceed to `01.1_datasets-univaraite-eda.ipynb` to analyze a specific univariate dataset in detail, applying the techniques discussed above.\n",
     "2. **Explore Advanced Tools:** Proceed to `01.4_gluonts_datasets.ipynb` to explore the GluonTS library, a powerful tool for developing advanced forecasting methods.\n"
    ]
   }
