--- a/01.1_datasets-univariate-eda.ipynb
+++ b/01.1_datasets-univariate-eda.ipynb
@@ -2,47 +2,38 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "37133338-2d85-4216-9502-a6bc88330f1a",
+   "id": "ce8c78be-4e26-4a5e-8d2e-141ffb4f9f8d",
    "metadata": {},
    "source": [
     "# Exploratory Analysis of a Univariate Time Series\n",
     "\n",
-    "In this notebook, we will focus our attention on a single univariate time series datasets.  We will explore one time series in depth to understand its characteristics and underlying patterns.\n",
+    "In this notebook, we'll delve deeply into a single univariate time series dataset, specifically `m4_monthly_dataset_43531.csv` from the M4 Time Series modeling competition. Our goal is to thoroughly understand its characteristics and underlying patterns.\n",
     "\n",
-    "Specifically, we will look at the following -- `m4_monthly_dataset_43531.csv` which was used in the M4 Time Series modeling competition. To summarize our dicussion from the previous notebook, we will look at the following characteristics of this time series :\n",
+    "We will look at the following -- \n",
     "\n",
-    "**Raw data:** Visualize Plain raw time series\n",
+    "- **Raw Data Visualization:** Display the plain raw time series to visually assess trends, cycles, and irregularities.\n",
     "\n",
-    "**Summarization:** \n",
-    "- Look at the basic descriptive statistics to get a sense of mean and variance.\n",
-    "- Rolling Statistics: We look at such statistics on a rolling window to understand more about the time series rather than the whole chunk of the data across the time\n",
+    "**Summarization**\n",
     "\n",
-    "**Correlation Plots:** How time series observations are correlated across time?\n",
-    "- Lag plots: How does the observations relate across varying lags?\n",
-    "- Autocorrelation & Partial Autocorrelation: These plots help us understand the autocorrelation feature of the time series, i.e., how much dependence do the points have on the past observations. These plots come in very useful at the time of deciding the parameters for the statistical forecating methods.\n",
+    "- **Descriptive Statistics:** Examine central tendency and variability to sense the general behavior.\n",
+    "- **Rolling Statistics:** Analyze statistics on a rolling window basis to understand temporal changes more clearly.\n",
     "\n",
-    "**Stationarity:** Whether the statistical properties of a time series are constant over time?\n",
+    "**Correlation Plots**\n",
     "\n",
-    "- Stationarity Test: A time series is stationary if its properties (distribution) does not change over time. There are statistical tests that determine whether a time series is stationary or not. Several statistical models assume stationarity in their modeling, as a result, if the time series is proven to be not stationary, it is made stationary by differencing, i.e., taking a difference between the next and the current observation\n",
+    "- **Lag Plots:** Explore how observations at different lags relate to each other.\n",
+    "- **Autocorrelation and Partial Autocorrelation (ACF and PACF):** These plots reveal the extent of dependence on previous observations, crucial for selecting parameters in statistical forecasting models.\n",
     "\n",
-    "**Decomposition**: How does a time series can be decomposed into constituent time series with specific properties such as constant trend or periodicity?\n",
-    "- Time Series Decomposition: A common method of modeling a time series is by assuming that it is composed of trend, seasonality, and remaining is termed as residual. A trend component represents a drift component that determines a natural tendency of the time series to move, while seasonality component describes the repeating phenomenon where the values repeat after a constant period. The residual part of the time series, is ideally stationary which can be further modeled by statistical modeling techniques or any advanced techniques which can account of non-linear dependencies between the variables. \n",
+    "**Other tools**\n",
     "\n",
+    "- **Stationarity Test:** Determine if the time series has consistent statistical properties over time, a prerequisite for many models. If non-stationary, apply differencing to stabilize.\n",
     "\n",
+    "- **Time Series Decomposition:** Break down the series into trend, seasonality, and residuals. The trend shows long-term progression, seasonality indicates cyclical patterns, and residuals should ideally be stationary, further modeled to account for non-linear dependencies.\n",
     "\n",
-    "**Frequency Analysis:** A deeper look into the periodicity behind the time series. \n",
-    "    - This requires us to do fourier decomposition of the time series resulting in a spectrum of frequencies. This gives us an idea about the constituent frequencies and their influence on the time series. For example, a high intensity lower frequency implies lots of short-term fluctuations. \n",
+    "- **Fourier Decomposition:** Analyze the spectrum of frequencies to understand the impact of various cycles on the time series. For instance, prominent lower frequencies suggest significant short-term fluctuations.\n",
     "\n",
     "\n",
-    "By the end of this section, you'll have a clearer picture of how to systematically approach and analyze a univariate time series, applying each technique through practical examples and Python code snippets.\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ae723fa0-b6ba-4baf-9161-d45a524bcc74",
-   "metadata": {},
-   "source": [
+    "By the end of this section, you will have a comprehensive understanding of how to systematically analyze a univariate time series. \n",
+    "\n",
     "## Setup"
    ]
   },
@@ -153,9 +144,7 @@
    "id": "1d5c5751-be67-4984-a8cb-7a45ebc54f06",
    "metadata": {},
    "source": [
-    "**Note:** The dataset, as processed by the authors, has a column by the name `channel_1`. For an univariate dataset, there will only be one column and that is named `channel_1` as per the convention followed by the authors. We will look at a multivariate dataset in the next notebook. \n",
-    "\n",
-    "The indices are in the form of DateTimeIndex."
+    "**Note:** The dataset processed by the authors contains a single column named `channel_1`, which follows the convention for univariate datasets in this series. This column represents the time series data we will analyze. In subsequent notebooks, we will explore multivariate datasets. Additionally, the dataset uses a DateTimeIndex for the indices, facilitating time-based operations and analysis.\n"
    ]
   },
   {
@@ -235,9 +224,9 @@
    "id": "93c1e866-083a-4c2f-a8c8-6a1f5425e084",
    "metadata": {},
    "source": [
-    "**Observations:** By looking at the time series one can gather the following --\n",
-    "1. There seems to be strong periodicity (seasonality) components. As a result, one can expect strong correlation at a certain lag. \n",
-    "2. There seems to be a good amount of short-term fluctations (we can expect higher intensity of low-frequencies in the power spectrum)"
+    "**Observations:**\n",
+    "1. There is evident periodicity within the data, suggesting that certain lags will demonstrate strong correlations due to recurring seasonal patterns.\n",
+    "2. The data exhibits considerable short-term fluctuations, indicating a likely presence of high-intensity low-frequency components in the power spectrum, reflecting these frequent changes.\n"
    ]
   },
   {
@@ -320,7 +309,7 @@
    "id": "e1235eac-85dc-4aba-b2ed-a8e50dc068c0",
    "metadata": {},
    "source": [
-    "**Observations:** We see that the temporal properties of the time series vary. It is hard to say that the time series is stationary.  "
+    "**Observations:** The time series exhibits varying temporal mean, suggesting that it may not be stationary. "
    ]
   },
   {
@@ -450,9 +439,11 @@
    "id": "b37cbd21-0a0c-407d-bb27-4ace29fd92ef",
    "metadata": {},
    "source": [
-    "**Note:** A sudden decline of autocorrelation with lag implies a strong correlation with the values at `t-1` and less correlation with the values beyond that lag. This information is often useful in determining the autoregressive (AR) order in the statistical modeling methods such as ARIMA. \n",
+    "**Note:**\n",
     "\n",
-    "**Note:** Partial autocorrelation is correlation given the intermediate values. As a result, it is much more damped than autocorrelation if the correlation in ACF plots are due to intermediate dependencies. "
+    "- A sharp decline in autocorrelation at a lag suggests a strong correlation with the immediate previous value (t-1) and diminishing correlations with further lags. This characteristic is crucial for determining the autoregressive (AR) order in statistical models like ARIMA.\n",
+    "\n",
+    "- Partial autocorrelation accounts for intermediate values, often showing more lower values than autocorrelation. This damping effect in PACF plots indicates that correlations observed in ACF may stem from these intermediate dependencies."
    ]
   },
   {
@@ -498,7 +489,7 @@
    "id": "34cef733-0d0b-4285-ac63-6cdbacbea48d",
    "metadata": {},
    "source": [
-    "**Note:** As expected from the above plots, the time series is non-stationary. As a result, we might want to opt for transformations that induce stationarity such as differencing. "
+    "**Note:** As expected from the above plots, the time series is non-stationary. Consequently, to prepare for effective modeling, we should consider applying transformations like differencing that help induce stationarity."
    ]
   },
   {
@@ -615,7 +606,7 @@
    "id": "b903fd03-0e0b-4359-82df-0dae4e66048f",
    "metadata": {},
    "source": [
-    "A high intensity of lower frequencies indicate rapid fluctations. "
+    "**Observation:** A high intensity of lower frequencies in the spectrum indicates rapid fluctuations in the time series."
    ]
   },
   {
@@ -625,7 +616,10 @@
    "source": [
     "## Next Steps\n",
     "\n",
-    "Let's move onto the next notebook to look at how to explore a multivariate time series."
+    "1. **Further Data Analysis (Optional):** Proceed to `01.2_datasets-multivariate-eda.ipynb` to analyze a specific multivariate dataset, applying more visualization tools to develop understanding of mutlivariate time series.\n",
+    "\n",
+    "2. **Explore Advanced Tools:** Proceed to `01.4_gluonts_datasets.ipynb` to explore the GluonTS library, a powerful tool for developing advanced forecasting methods.\n",
+    "\n"
    ]
   }
  ],
